# whale-client

./: .env.example  .envrc  .gitignore  README.md  pyproject.toml
examples/: accelerators.py  bugs_features.py  tasks.py  user_feedback.py
whale/: application.py
whale-client/models/: manager.py
whale/api/: entry.py
whale/models/: application.py  component.py  manager.py
whale/models/api/: entry.py
whale/models/database/: api.py  api_manager.py  table.py
whale/sandbox/: main.py
whale_client/api/: entry.py
whale_client/models/: application.py  manager.py  table.py
whale_client/models/api/: entry.py
whale_client/sandbox/: feedback.py  main.py  tasks.py
